--- a/src/Pages/Pages.New.fmx
+++ b/src/Pages/Pages.New.fmx
@@ -2,8 +2,8 @@ object PageNew: TPageNew
   Left = 0
   Top = 0
   Caption = 'Nova Carteirinha'
-  ClientHeight = 680
-  ClientWidth = 800
+  ClientHeight = 675
+  ClientWidth = 792
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
@@ -12,8 +12,8 @@ object PageNew: TPageNew
   DesignerMasterStyle = 0
   object lytNew: TLayout
     Align = Client
-    Size.Width = 800.000000000000000000
-    Size.Height = 680.000000000000000000
+    Size.Width = 792.000000000000000000
+    Size.Height = 675.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 2
     object lytInterno: TLayout
@@ -22,28 +22,28 @@ object PageNew: TPageNew
       Padding.Top = 20.000000000000000000
       Padding.Right = 50.000000000000000000
       Padding.Bottom = 50.000000000000000000
-      Size.Width = 800.000000000000000000
-      Size.Height = 593.000000000000000000
+      Size.Width = 792.000000000000000000
+      Size.Height = 542.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object VertScrollBox: TVertScrollBox
         Align = Client
-        Size.Width = 700.000000000000000000
-        Size.Height = 523.000000000000000000
+        Size.Width = 692.000000000000000000
+        Size.Height = 472.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         ShowScrollBars = False
-        Viewport.Width = 700.000000000000000000
-        Viewport.Height = 523.000000000000000000
+        Viewport.Width = 692.000000000000000000
+        Viewport.Height = 472.000000000000000000
         object edtCpfResponsavel: TEdit
           Touch.InteractiveGestures = [LongTap, DoubleTap]
           Align = Top
           TabOrder = 6
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 339.000000000000000000
+          Position.Y = 345.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -52,10 +52,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 7
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 392.000000000000000000
+          Position.Y = 399.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -64,9 +64,9 @@ object PageNew: TPageNew
           Align = Top
           Margins.Right = 500.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 445.000000000000000000
-          Size.Width = 200.000000000000000000
-          Size.Height = 26.000000000000000000
+          Position.Y = 453.000000000000000000
+          Size.Width = 192.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
           TabOrder = 8
@@ -79,8 +79,8 @@ object PageNew: TPageNew
           TextSettings.Font.Family = 'Fira Code Retina'
           Position.Y = 22.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -89,10 +89,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 4
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 233.000000000000000000
+          Position.Y = 237.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -101,10 +101,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 5
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 286.000000000000000000
+          Position.Y = 291.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -113,10 +113,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 1
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 75.000000000000000000
+          Position.Y = 76.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -125,10 +125,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 2
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 127.000000000000000000
+          Position.Y = 129.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -137,10 +137,10 @@ object PageNew: TPageNew
           Align = Top
           TabOrder = 3
           TextSettings.Font.Family = 'Fira Code Retina'
-          Position.Y = 180.000000000000000000
+          Position.Y = 183.000000000000000000
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
-          Size.Height = 26.000000000000000000
+          Size.Width = 692.000000000000000000
+          Size.Height = 27.000000000000000000
           Size.PlatformDefault = False
           StyledSettings = [Size, Style, FontColor]
         end
@@ -148,8 +148,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 317.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 323.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -160,8 +160,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 370.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 377.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -172,8 +172,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 423.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 431.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -184,7 +184,7 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Size.Width = 700.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -195,8 +195,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 211.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 215.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -207,8 +207,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 264.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 269.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -219,8 +219,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 53.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 54.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -231,8 +231,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 106.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 108.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 16.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -243,8 +243,8 @@ object PageNew: TPageNew
           Align = Top
           StyledSettings = [Size, Style, FontColor]
           Margins.Bottom = 5.000000000000000000
-          Position.Y = 158.000000000000000000
-          Size.Width = 700.000000000000000000
+          Position.Y = 161.000000000000000000
+          Size.Width = 692.000000000000000000
           Size.Height = 17.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
@@ -255,20 +255,73 @@ object PageNew: TPageNew
     end
     object lytHeader: TLayout
       Align = MostTop
-      Size.Width = 800.000000000000000000
-      Size.Height = 30.000000000000000000
+      Size.Width = 792.000000000000000000
+      Size.Height = 63.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 9
-      object btnVoltar: TSpeedButton
-        Align = MostLeft
-        StyledSettings = [Size, FontColor]
-        Size.Width = 81.000000000000000000
-        Size.Height = 30.000000000000000000
+      object Label1: TLabel
+        Align = VertCenter
+        AutoSize = True
+        StyledSettings = [Style, FontColor]
+        Position.X = 96.000000000000000000
+        Position.Y = 22.000000000000000000
+        Size.Width = 696.000000000000000000
+        Size.Height = 18.000000000000000000
         Size.PlatformDefault = False
-        Text = '<--'
-        TextSettings.Font.Family = 'Fira Code'
-        TextSettings.Font.StyleExt = {00070000000000000004000000}
+        TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.Size = 14.000000000000000000
+        TextSettings.HorzAlign = Center
+        Text = 'Nova carteirinha'
+        TabOrder = 0
+      end
+      object btnVoltar: TRectangle
+        Align = Left
+        Fill.Color = claNull
+        Margins.Left = 3.000000000000000000
+        Margins.Top = 3.000000000000000000
+        Margins.Right = 3.000000000000000000
+        Margins.Bottom = 3.000000000000000000
+        Position.X = 3.000000000000000000
+        Position.Y = 3.000000000000000000
+        Size.Width = 90.000000000000000000
+        Size.Height = 57.000000000000000000
+        Size.PlatformDefault = False
+        Stroke.Color = claNull
+        XRadius = 5.000000000000000000
+        YRadius = 5.000000000000000000
         OnClick = btnVoltarClick
+        object ColorAnimation2: TColorAnimation
+          Duration = 0.200000002980232200
+          PropertyName = 'Fill.Color'
+          StartValue = claNull
+          StopValue = x1E36393F
+          Trigger = 'IsMouseOver=true'
+          TriggerInverse = 'IsMouseOver=false'
+        end
+        object lblBtnVoltar: TLabel
+          Align = VertCenter
+          AutoSize = True
+          StyledSettings = []
+          Position.Y = 17.000000000000000000
+          Size.Width = 90.000000000000000000
+          Size.Height = 23.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Family = 'Fira Code Retina'
+          TextSettings.Font.Size = 18.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          TextSettings.FontColor = xFF202225
+          TextSettings.HorzAlign = Center
+          Text = '<--'
+          TabOrder = 0
+        end
+        object ColorAnimation3: TColorAnimation
+          Duration = 0.200000002980232200
+          PropertyName = 'Stroke.Color'
+          StartValue = claNull
+          StopValue = x5A36393F
+          Trigger = 'IsMouseOver=true'
+          TriggerInverse = 'IsMouseOver=false'
+        end
       end
     end
     object FloatAnimation: TFloatAnimation
@@ -286,9 +339,9 @@ object PageNew: TPageNew
       Margins.Right = 2.000000000000000000
       Margins.Bottom = 2.000000000000000000
       Position.X = 2.000000000000000000
-      Position.Y = 628.000000000000000000
-      Size.Width = 796.000000000000000000
-      Size.Height = 50.000000000000000000
+      Position.Y = 610.000000000000000000
+      Size.Width = 788.000000000000000000
+      Size.Height = 63.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = claSkyblue
       XRadius = 5.000000000000000000
@@ -306,8 +359,8 @@ object PageNew: TPageNew
         Align = VertCenter
         AutoSize = True
         StyledSettings = []
-        Position.Y = 16.000000000000000000
-        Size.Width = 796.000000000000000000
+        Position.Y = 22.000000000000000000
+        Size.Width = 788.000000000000000000
         Size.Height = 18.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Family = 'Fira Code Retina'
