improvement on pic editor

--- a/src/Pages/Pages.Editor.fmx
+++ b/src/Pages/Pages.Editor.fmx
@@ -25,18 +25,49 @@ object PageEditor: TPageEditor
       Stroke.Kind = None
       object ImageViewer1: TImageViewer
         Align = Scale
-        Position.X = 214.000000000000000000
-        Size.Width = 330.000000000000000000
-        Size.Height = 440.000000000000000000
+        Position.X = 198.000000000000000000
+        Position.Y = -40.000000000000000000
+        Size.Width = 354.000000000000000000
+        Size.Height = 472.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         OnMouseDown = ImageViewer1MouseDown
         OnMouseMove = ImageViewer1MouseMove
         OnMouseUp = ImageViewer1MouseUp
+        OnMouseWheel = ImageViewer1MouseWheel
         BackgroundFill.Kind = None
         ShowScrollBars = False
-        Viewport.Width = 326.000000000000000000
-        Viewport.Height = 436.000000000000000000
+        Viewport.Width = 350.000000000000000000
+        Viewport.Height = 468.000000000000000000
+      end
+      object Button1: TButton
+        Align = Scale
+        HelpType = htKeyword
+        Position.X = 483.000000000000000000
+        Position.Y = -39.000000000000000000
+        Size.Width = 67.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        StyleLookup = 'refreshtoolbutton'
+        TabOrder = 1
+        Text = 'Button1'
+        OnClick = Button1Click
+      end
+      object track_zoom: TTrackBar
+        Align = Scale
+        CanParentFocus = True
+        Max = 3.000000000000000000
+        Min = 0.500000000000000000
+        Orientation = Horizontal
+        Margins.Right = 80.000000000000000000
+        Position.X = 243.000000000000000000
+        Position.Y = 400.000000000000000000
+        Size.Width = 270.000000000000000000
+        Size.Height = 19.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 2
+        Value = 0.500000000000000000
+        OnChange = track_zoomChange
       end
     end
     object layout_edit: TLayout
@@ -46,186 +77,6 @@ object PageEditor: TPageEditor
       Size.Height = 70.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 1
-      object img_rotate: TImage
-        MultiResBitmap.Height = 177
-        MultiResBitmap.Width = 177
-        MultiResBitmap = <
-          item
-            Width = 177
-            Height = 177
-            PNG = {
-              89504E470D0A1A0A0000000D49484452000000B1000000B108060000008B295C
-              C5000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-              11F049444154785EED9D09B01C55158679B38690088110028912964424914D11
-              101150408D20A140DC1114C5B5A0A2B8955028051452680982608962212A82CA
-              A258948288B8212A16B24A04042401120CD9DEBC59E27766CEA31292C77BD3B7
-              67A6EFBCFFAB3A75BBEFF4F472EFDFA74F77DF7B7B132184104208913A8D4663
-              D7B56BD70EF8AC1071818067D7EBF51F90EEE75942C403DEB78880CF191C1C5C
-              C1F4E59E2D441C20DACDF1BE2722E0A54CAFAD56AB0FF94F42641F345B42C047
-              23DC7F23E2868998741579FBF82242641B347B50AD56FBAB89775D082D2EF145
-              84C82E78DB3988F546D7ED7AE0991FF6C584C826087877047C19A143CD75BB1E
-              E457490EF1C585C81688731202BE10A1AE692A76041452884C82072E631FAD54
-              2A4FBA564784906211C944FFAB10BD0741E6B1B7E3819F32918E8687140BFCEF
-              42F41E3CF091B55AED8F2D898E0D428AEFF8DF85E82DE8712A02BEA325CDB133
-              3434F41F9229BE1A217A031E782F3CEA8F5AB26C0FBBF9E3FFC730A946411924
-              E7695F83F8A6609FE4262D696C5BE6FFC70C0C0CACF57921BA07E2B357CA0B2B
-              95CA62A613C3FF97B09E69BE5A21BA03DA6BB68920A67DB425C5E410525458D7
-              BB7CD542740744772C3772BF771D06434C7D1DC9A87131CB34C334D2099E962C
-              5D17F20A9EE69B1922317D79A3823006B05D11F15588784EB95C2EFA4F41E0D1
-              17178BC5B9B95C6E99898F18B94E3A156BF0F336B608B6136622DE96DF57F2DB
-              2CA61FF3FCFF602FC5EEC76CF915D8832CB71DE95D2C6B317781F5DB0B9622F9
-              55E6C528F4A58811EF7688E04B88E144CF4A05E2E29588F862C47533B33BB18D
-              E9A42FC786989E475AE7A499C576AD19E736A44B49A770124DE4BFCF924E217D
-              86E5B6E2B7FFB2AE499C186B985ECE725B944AA5FB499FE3F7E7D8C61DA47672
-              FC9BE9DB58FF56A44BB041F2C43AF49D88A9EC1D11C2C26AB5FA3E44F312CF4E
-              0D13A38994EDA0B9D234E66B6CA7191A84C07AD6B29EF5EA03812F613BF942A1
-              702FE27D82AC4748EFC3AE27FF8DCC3FC8BEFCB3B9F038A6EF444CDC7A267602
-              5E6E866745CFB0C0495731BB3A9FCF9B37CF216EBB0A5C8D9D8DB0EF22153183
-              67CAE181DF43FABF41EF9DD1AF707C168BAF0727EE351CFF5E5E1CE38ABEF0C4
-              545E99E4B554E4B7F14E3BB672C72794C5CFF0CA671366DCE9597D4FBFBCB13B
-              98CA3B6BBC0BD840BC4721E2BF70425F4F99BCC6B3FB9AA845CC55344F45CD20
-              3DB956ABBDDAB30520E62310F39F11F3CF29A37D3DBB2F895DC43B629FA956AB
-              8771E393CAB3E07E0331BF1531FF1131FF1231BFD6B3FB8A68458C7837277917
-              023E1101F74B58D43110F39B11F3EF11F34D94DDEB3CBB2F8859C4EF2484F800
-              0256D7A13640CC8791FC0E31DF4C191ED4CA8D9BE89E4E50F025F32454C2A5DC
-              C8EDECD922218418B7E2A1CF44DCB778567444E78911F0A1D86912703A20DE83
-              10F1CD5CD57E4BB946393C41549ED89F445C41C11FEC592265B8C2DD9ECFE73F
-              8FB06FF7ACCC138D8811F0F608F8546EE42C0EDED4B34507A8542AAB274C98B0
-              99CF669E28C209C46BCD1D3F8407FEB804DC7928E32A4EE30B983517CD3C9917
-              31E22D62C771993BCEB344E7D97C6868E80B94FBF908797FD24C5FB16310F101
-              DC742C2C168BD6983CD358B34C4FD778BAD45204F194CF3F6D976A9F6EFE465A
-              B1346BE08D3723747B37E5FF656C37CFCE24993EC3F00247606770A391F9D659
-              9C680F10EEDCCBE403D80C6E8C6E23B546F37FC36663FF24CF1AD29B78B7C69A
-              90B72FC768429E416A6D3F06B8EAEC406A6F20AD0966CFBB2FB13F77736CE732
-              790D69E64EBACC8A980ADD1DBB1871EC93858A1C0DF6F54A04791A668DD71BA4
-              4DAF3C8C5D92612DCB954D08CCE798B79E1BCDA72EE43D41DE2ED82BC8DA029B
-              4EFE11A49B52063B5106936DD95EC0C5A2CEFE2D2E140AA792FED0B333432645
-              4C45DAA707CEE772761C9517459B08BCD55D54F07CEC49CF4A0CC73F1181AF26
-              9DCAEC1ED824CAE3F5D89108692B4455A45CBAFEA692ED2E2B954A9F65DFBE33
-              7C026681CC89988ADA86CA5B88184E62D6DA47440115DCA0828FA5727F8AA53A
-              C80AE561BDA56D0C6513F5EB49E7637BE0A16721E6AE0EAF65F13DF727E7728C
-              5F4BFB38FB062AE77314D4E3A45161BD2DE0324EC2AE3C02643BFB63A7B3CD5B
-              D8F69846F84C0BB6F734C9F1BE2B62180AC5DA061F65058445D9BD88F0E76112
-              EBA2DF3528B33DB19311F38DDD14B3D513DBFDA0EF86A04C6CA49E572382FB5A
-              45142776F2C17BFCB0BA0ADB9D879D82987FC37E3CE3BBD4510867FEC1360FF5
-              5D18DF50106FB0CBA2974DB4F815E472AC39F24F2FA02CCD337F917DB893FDB1
-              8F4A760C3B5E1CCFBD6CEF40DFFCF88372984A019411F03514888DE5103DC4F3
-              8F724C73FD107B06FBB00FE5FAF56E942B1EF90F24F64C7CFC41215F8ADD4441
-              6FF4EB4531C2B1D411D047FC107B0EFB729C9D58BE7B1D837AFC09DB8AA6D150
-              2A70C033EC72E465D05750A157717C9969A8C4BEECCC3E7D8BF27ED677317558
-              B7BDC0F91CB6C1E0899DA6976D27B628168BD752B87FA9542A6BEC392B6603F2
-              450FC7641D32ED55732618181858849D562A95BE622F2CB0BAFF941AE572B9C4
-              7A1722E2377956D7E8E9CB0E3CC44C92ED317B1F7F200560E324E41181B527B0
-              4B53BE97AF5B934265D610CC29B95CEE22CFCA0494AF7D39EA68CA76613E9FEF
-              C877AB898FEF65DDC772ECF77856C7C9D41B3B0AD70600B4C631D656E29514B8
-              79B4E9A473289C397893411BC48F3C13CA0603F065098EE53A2AF2BDECF34ACF
-              CA0CECDB5E94E9B9D56AF540CA30D5D7FAD4CB1AD6F9638EBB6B2F433229020A
-              F8F9C6314CDBD812D61EC10647D99B697BCDBABBE55319D6C6625B0A2D6F9748
-              4BED3F59809BA9270997DE8A90FFEE599981B26B3A09CAEE8B08F928CA2DB5B0
-              927AB07A5B8AB3398363BFB895DB5932EBC9468282B7717A6D74481B98DADA11
-              6C8DCDC4CC6B97F1D8DB5129D648A6426A63B4F504AB4C2AF253ECEBD7B14CB6
-              31A02CADECCE456C2778566A1012FE89F57E04FB8767758CE844FC42A888C914
-              D40A4B99B5E19AB6C2CC7BCFC3E66213AD67B4892A4D8F331A6C6F2D9EF81708
-              F8FDECDF32CFCE1C949B39804BF0C887A479D273FC6B38FEEB898FDFE9591D23
-              7A11BF102AA480709A6D79A92013B5897B4BF2AD87F44C04650FE55F4521DB88
-              EB05EA2D7880EC91F090E218B6F907CFCA24949375C2358FFC0ECF4A8BE5ACF7
-              E3ACF74A9FEF087D27E21783CAB21E13D311F96614EE1E988D8063AF4E2DB5F6
-              B9AB10756AA3CB9B3726A4389DED9D95D5906218CA6637EC1B78CE033C2B188E
-              BF4A79DA097C38C7DFB11BDC7125E2178288AD17B5F5A2B072B0477CF66C777B
-              2A734F623A6BBB9BA312ECF7447848F14B3CD1FBA9441BDD3DD370DCF6B19E1F
-              23E4D45E9B5306CF7022DB78C95FF3ACD419D7221E06F1A231FBE052F339EA2C
-              131CA93D86B21171EC6EDB86CDB211871A88F265F61F2A674C31B68714275089
-              377956A6E19817B0CF17936E9D56A8C5CDF6FD9C188753068B3C4B74133CD396
-              5819DB8D8A3D1E319F859D4708720FB6687070D0E23E7BED6A5F50DA00F26BB6
-              BCAF2E0A38D69338B687FD1082A10C5653065FF6D5A78E3C719B98A8F128CB48
-              ED2988C5D2762369CD1F77A5BE66925ACB3C7B76FDBC1763FE37FCE7DD2CB7D8
-              B3320DFB6BDFB2FE2EFB3C9FD9E02E6276D5C2133F5A28146CDC37FB969FC812
-              54F6F30D5EA87C1B686401E9D1789EAB98BE15B376BDAB2DCF178B02F67B2A61
-              C06D7625613A152883D37DF52216A8B45760E6A58FC4A2EB01C13E1F8B88536B
-              584F88F22089DD308BD8A0E2323FD2D2487045F91E421E6CAA300538314EF655
-              0BD11D10DD5CC28A3B5C83C17052DCC23AB7F5D5A742B41E4274076EEEEEC1AE
-              F0D9600829EC1BD8F649DFD49088C5A80C0C0C5C8407BDD39E327856085BE090
-              DFECD3A920118B5141C40DBCF105A44F7B560805446C6F0653EBF922118BB172
-              6DA15008FE087AB95C1E20C6B6617ADFD6CA0947221663024FBC024F7C392145
-              1AFD2027E38DADAD4A2A2FDB2462D10E37E049EFF6E910EC336E3B6036E26730
-              12B1183378631B88E5CA6AB56A633027C6430A6BD79DCA57B02462D12E5723E6
-              A7082B42DB474FE184D89B1BBCE0DE2412B1680B04FC783E9F7F88C9E6B74792
-              8237CEB32E7B4231A795931C895824E1460418DCC81F6FBE13C99EADB9E448C4
-              A26D08034CC48F85BEFCC01BDB8B8FD958D0D05712B1681B8B890706061E67B2
-              F9A9B340AC074DD0002E12B1480422FE751A2145BD5EB7C76C41E3394BC42229
-              3F47C44B0829D6FBD459BB341A8D2D49823AA64AC422112660BCF1B34CA63174
-              9875F34A8C442C1283906F25091D2636474CFC9290B85822168941787FB6A435
-              971813AF0D6A93F8A587442C42588A370E6A9E69AFA0898B6DDCBCC45A948845
-              088BF3F9FCDD21CF8BEDBFC4D6ABB0C41D483B32EE0467953E979A22547026C7
-              07A19AED039AD7E28D0FF7AC44F8284927B19E1B3CAB2DE4894508E6811F0A7D
-              73C7C9B00D89F5A84E74B24AC422046BC4731F6968DF3B1B66772E179C445770
-              89582406D1D9E840F65421F8311B660DE5E589454FB0AF24858AD8046C63BE49
-              C4A227D4CAE572D5A713C1FF4D87F6D52C8513A2FB1052ACAAD7EB8BB8B94BFC
-              44CA6F0CEDF575A2F190256211CAAA5AAD36C75E5AF87CDBB8272E714224F2E8
-              12B1086502227CC0A713619E3897CBD940E6895E3D4BC422086EC89657ABD569
-              21E104D8ABE79578E244635A48C4229469F6982D249C70CC0B2B26163DC13ED2
-              13D447CEB1DED3895E9A48C42231FE72E2E5581A3A4A1C8E48C4220413B16928
-              A88B12D853891558223D4AC42231DC88D9E57F26B669332339F621C12749139D
-              0C12B1480CE1847DFECCC6540BD591BDB6B670423776A2BB20E05AA3D1986C8F
-              263C2B29E6C91F637D7AD9217AC2CB029F111BF6F1F2C41F6994884562082776
-              C166873E23CEE572CB4812AF432216214C47C4419FCD352FEE227EA495D33E12
-              B1488C09B85EAF0789D8BC383C8225FEEEB5442C1283880F2099D49A4B86C7D3
-              4B58D7E4564EFB48C422118D46630661C04178D2A0112DDD13DB9309BBB94B84
-              442C9232AD56AB85BEE4B0EEFA4B487E8B88137736958845DB70E937DDEC5228
-              14766DE524279FCF3F4562377689918845DB98D744C887F96C10ACCB06EB0EFA
-              369E442CDA8678783B6C7F9F4D0C377555447C3B96F8F19A21118BB6C003DB4B
-              8983EBF5FAB6AD9C20AC736811110775F9978845BB6C8E90E793063D9530CAE5
-              720E019FE1B3899188455B20E0D7104AEC8D00431BFD0CF3254F1323118B3183
-              8027DA0D1DA184B5210EC61EAFB1BEF37C363112B11833086E3FEC009C70F0F3
-              61A3582C5E94CBE556F96C622462312610EF24EC0DB55A6D9E670551A9549611
-              0F5FE0B34148C462ACEC6B22C60B4FF4F920F0C29722E2E53E1B84442C46C57A
-              6F600BF0C2C1DF6136F0C28308F8429F0D46221663E17588F890B49E48E085BF
-              492C6C1D43534122162F8A7961C288F7D6EBF5599E15045E78082F7CBECFA682
-              442C46E32D84116F4CD10B5F88177EC26753412216238217B636129FC01327FE
-              3CD7BAE0859FC50B9FEDB3A921118B8D8270ED73B567E285F7C309A7F1FD66F3
-              C2DFF6FE74A912D44B752438F8D02EDC621DF05E1DA9A791A0FAEC99F0FCA1A1
-              A1EF23E0E03612CE72D6391B11077D817463C8138B8D5140706F4951C0169A5C
-              DE09011B12B1D818F699DA6BEBF5FA9DF634C1F312C33A6A08F8AB3E9B3A12B1
-              D800045C4574D7611F268EBDC26EC8FCA744B08ECB5867E2117E464331710474
-              3B267E21840247609FCFE7F3FB79D698E104B061E477E410827A6FBC18F2C462
-              54F0C83760A7307935A27CA6953B36F0C2D646A2630236E48923A0D79E7818BC
-              F16C9205C4CA1FC076C6C3BEE850AC08FEB952A9B40B27406AAF9837863CB118
-              3388F15FD87984151FC3C3FECAB3478465BEDF69011BF2C41190154FBC2E54B1
-              F5F2F8F4D0D0D027F1C81BBCD1C30BAFC40BCF43C48F7A56C790271689E0BC5A
-              8D9D83508F27B4F813A25DEF511C5EF887FCDEB12712EB224F1C0159F4C4C350
-              D51617EF4BBC7C6AB55A3D94E93A9ED9DEF8ED8C175ED45CA8C348C411906511
-              0F8388AD95DB07A9FA1DD8DDFB11F065AD5F3A8F441C0131887818AADE3E4613
-              FA49B0B6504C2C52A5DB02362462113D12B1881E8958448F442CA2472216D123
-              118BE8918845F448C4227A2462113D12B1881E8958448F442CA2472216D12311
-              8BE8918845F448C4227A2462113D12B1881E8958448F442CA2472216D123118B
-              E8918845F448C4227A2462113D12B1881E8958448F442CA2472216D123110B21
-              841042082184104208218410226236D9E4FFC632732105C8B08E000000004945
-              4E44AE426082}
-            FileName = 
-              'C:\Temp\Videos\64 - Editor de Fotos --------\Fontes_Editor\Image' +
-              's\rotate.png'
-          end>
-        Align = Center
-        Margins.Left = 280.000000000000000000
-        Margins.Bottom = 10.000000000000000000
-        Size.Width = 44.000000000000000000
-        Size.Height = 44.000000000000000000
-        Size.PlatformDefault = False
-        OnClick = img_rotateClick
-      end
-      object track_zoom: TTrackBar
-        Align = Center
-        CanParentFocus = True
-        Max = 3.000000000000000000
-        Min = 0.500000000000000000
-        Orientation = Horizontal
-        Margins.Right = 80.000000000000000000
-        Size.Width = 297.000000000000000000
-        Size.Height = 19.000000000000000000
-        Size.PlatformDefault = False
-        TabOrder = 1
-        Value = 0.500000000000000000
-      end
       object retBtnSalvar: TRectangle
         Align = Scale
         Fill.Color = xC84682B4
@@ -233,9 +84,9 @@ object PageEditor: TPageEditor
         Margins.Top = 5.000000000000000000
         Margins.Right = 2.000000000000000000
         Margins.Bottom = 2.000000000000000000
-        Position.X = 751.653381347656300000
-        Position.Y = -3.000000000000000000
-        Size.Width = 182.751464843750000000
+        Position.X = 776.000000000000000000
+        Position.Y = 5.000000000000000000
+        Size.Width = 158.000000000000000000
         Size.Height = 63.000000000000000000
         Size.PlatformDefault = False
         Stroke.Color = claSkyblue
@@ -262,7 +113,7 @@ object PageEditor: TPageEditor
           AutoSize = True
           StyledSettings = []
           Position.Y = 22.000000000000000000
-          Size.Width = 182.751464843750000000
+          Size.Width = 158.000000000000000000
           Size.Height = 18.000000000000000000
           Size.PlatformDefault = False
           TextSettings.Font.Family = 'Fira Code Retina'
